# ftp_server

./: .env  Cargo.toml
migration/: ftp.sql
src/: main.rs
src/storage/: detail.rs
src/user/: repo.rs
src/utils/: db.rs
