[package]
name = "ftpserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
libunftp = "0.19.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json"] }
salvo = "0.55.5"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
unftp-sbe-fs = "0.2.3"
unftp-sbe-rooter = "0.2.0"